[workspace]
resolver = "2"
members = ["sdv", "sdv-core", "sdv-macro", "sdv-util"]

[workspace.dependencies]
anyhow = "1.0"
nom = "7.1.3"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["indexmap"] }
strum = { version = "0.24", features = ["derive"] }
xnb = { git = "https://github.com/konkers/xnb-rs", rev = "ca104c8f3a4b8fc44300fa67497a4ce0326a0018" }
xxhash-rust = { version = "0.8.10", features = ["xxh32"] }
