[package]
name = "sdv-util"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
sdv = { path = "../sdv" }
termimad = "0.20"
crossterm = "0.23.1"
