[package]
name = "sdv-util"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24.5"
indexmap = "1.6.1"
itertools = "0.10.5"
num-traits = "0.2"
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }
sdv = { path = "../sdv" }
termimad = "0.20"
crossterm = "0.23.1"
