[package]
name = "sdv"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
indexmap = "1.6.1"
nom = "6.0.1"
num-traits = "0.2"
num-derive = "0.3"
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
serde_repr = "0.1.18"
xnb = { git = "https://github.com/konkers/xnb-rs", rev = "43acddb2b2556e07a5726d445c2fea622ca01f20" }
serde_json = { version = "1.0.115", features = ["indexmap"] }
