[package]
name = "sdv"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
indexmap = "1.6.1"
nom = "7.1.3"
num-traits = "0.2"
num-derive = "0.3"
roxmltree = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["indexmap"] }
serde_repr = "0.1.18"
strum = { version = "0.24", features = ["derive"] }
tsify = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
xnb = { workspace = true }
xxhash-rust = { version = "0.8.10", features = ["xxh32"] }
log = "0.4.21"

[features]
default = []
wasm = ["dep:tsify", "dep:wasm-bindgen"]
