[package]
name = "sdv"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
indexmap = "1.6.1"
nom = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
roxmltree = "0.19.0"
sdv-core = { path = "../sdv-core" }
sdv-macro = { path = "../sdv-macro" }
serde = { workspace = true }
serde_json = { version = "1.0.115", features = ["indexmap"] }
serde_repr = "0.1.18"
strum = { workspace = true }
tsify = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
xnb = { workspace = true }
xxhash-rust = { workspace = true }
log = "0.4.21"

[features]
default = []
wasm = ["dep:tsify", "dep:wasm-bindgen"]
